--- a/wazzap.html
+++ b/wazzap.html
@@ -1,22 +1,254 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Node Cellar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Le styles -->
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    }
+
+    a.plain:link {
+      color: #333;
+      text-decoration: none;
+    }
+
+    a.plain:active {
+      color: #333;
+      text-decoration: none;
+    }
+
+    a.plain:visited {
+      color: #333;
+      text-decoration: none;
+    }
+
+    a.plain:hover {
+      color: #333;
+      text-decoration: none;
+    }
+
+    .status-bar {
+      height: 60px;
+    }
+
+    .about-icon {
+      float: left;
+      margin-right: 12px;
+    }
+
+    .footer {
+      margin-top: 30px;
+      padding-top: 10px;
+      color: #999;
+      border-top: solid 1px #ddd;
+    }
+
+    .footer > p {
+      padding-top: 4px !important;
+      padding-bottom: 4px !important;
+    }
+
+    h5 {
+      width: 100%;
+      white-space: nowrap;
+      margin-bottom: 4px;
+    }
+
+    .thumbnail {
+      min-width: 260px;
+    }
+
+    .thumbnails li {
+      margin-left: 0px !important;
+      margin-right: 20px !important;
+    }
+
+    .home-hero {
+      font-size: 36;
+      color: white;
+      background-image: url('img/bg.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      margin-top: -19px;
+      padding: 180px;
+      text-align : center;
+      text-shadow: 1px 1px 1px #000;
+    }
+
+    @media only screen and ( max-width : 1000px ) {
+      .home-hero {
+        padding:100px;
+      }
+    }
+
+    @media only screen and ( max-width : 480px ) {
+      .home-hero {
+        padding:32px;
+      }
+    }
+
+
+    .home-hero .btn {
+      width: 160px;
+      margin: 10px 4px;
+    }
+
+    /* Social proof buttons from GitHub & Twitter */
+    .bs-docs-social {
+      padding: 15px 0;
+      text-align: center;
+      background-color: #f5f5f5;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #ddd;
+    }
+
+    /* Quick links on Home */
+    .bs-docs-social-buttons {
+      margin-left: 0;
+      margin-bottom: 0;
+      padding-left: 0;
+      list-style: none;
+    }
+
+    .bs-docs-social-buttons li {
+      display: inline-block;
+      padding: 5px 8px;
+      line-height: 1;
+      *display: inline;
+      *zoom: 1;
+    }
+
+    .well h3 {
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+  </style>
+
+  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+
+</head>
+
 <html>
 <body>
-<h1>Tile Buffer</h1>
-<script src="http://cdn.socket.io/socket.io-1.0.6.js"></script>
-<!-- <script src="http://vm:5001/socket.io/socket.io.js"></script> -->
+
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Node live</a>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+
+  <div class="row" >
+
+    <div id="content" class="col-md-12">
+
+
+      <div class="well col-md-3" style="text-align: center;">
+          <h3>Right Now</h3>
+          <p id="connections" style="font-size: 96px;line-height: 96px;">0</p>
+          <h5>active visitors</h5>
+      </div>
+
+      <div class="col-md-9">
+
+        <legend>Real Time Activity</legend>
+        <div class="row-fluid">
+          <table id="visits" class="table table-bordered table-striped table-condensed">
+            <thead>
+              <tr><td>URL</td><td>IP</td><td>Timestamp</td></tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+
+        <legend>Page Views</legend>
+        <div class="row-fluid">
+          <table id="pageViews" class="table table-bordered table-striped table-condensed">
+            <thead>
+              <tr><td>URL</td><td>Page Views</td></tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <footer class="footer">
+    <p>Built as a sample application with
+      <a href="http://nodejs.org/">Node.js</a>,
+      <a href="http://socket.io/">Socket.io</a>, and
+    <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.
+  </footer>
+
+</div>
+
+<script type="text/javascript" src="socket.io/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<!-- <script src="http://cdn.socket.io/socket.io-1.0.6.js"></script> -->
+<!-- <script src="http://vm:5001/socket.io/socket.io.js"></script> -->
+
 <script>
-    var socket = io.connect('http://vm:5000');
-    socket.on('error', function(){
-        console.log(arguments);
+
+  var socket = io.connect();
+  var pages = {};
+  var lastPageId = 0;
+
+  socket.on('connect', function () {
+
+    console.log('Socket connected');
+
+    socket.on('pageview', function (msg) {
+      $('#connections').html(msg.connections);
+      if (msg.url) {
+        if ($('#visits tr').length > 10) {
+          $('#visits tr:last').remove();
+        }
+        $('#visits tbody').prepend('<tr><td>' + msg.url + '</td><td>' + msg.ip + '</td><td>' + msg.timestamp + '</td></tr>');
+
+        if (pages[msg.url]) {
+          pages[msg.url].views = pages[msg.url].views + 1;
+          $('#page' + pages[msg.url].pageId).html(pages[msg.url].views);
+        } else {
+          pages[msg.url] = {views: 1, pageId: ++lastPageId};
+          $('#pageViews tbody').append('<tr><td>' + msg.url + '</td><td id="page' + lastPageId + '">1</td></tr>');
+        }
+
+      }
     });
-    socket.on('connect', function () {
-      socket.send(window.location);
-      console.log('connected!');
-      socket.on('pageview', function(msg){
-        console.log(msg);
-      })
-    });
+
+  });
+
+  // var socket = io.connect('http://vm:5000');
+  // socket.on('error', function(){
+  //     console.log(arguments);
+  // });
+  // socket.on('connect', function () {
+  //   socket.send(window.location);
+  //   console.log('connected!');
+  //   socket.on('pageview', function(msg){
+  //     console.log(msg);
+  //   })
+  // });
 </script>
+
 </body>
 </html>
